<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">spcmic Recorder</string>
    <string name="record_button_start">Start Recording</string>
    <string name="record_button_stop">Stop Recording</string>
    <string name="usb_device_connected">spcmic Connected</string>
    <string name="usb_device_not_found">No spcmic Found</string>
    <string name="permission_required">Audio recording permission is required</string>
    <string name="recording_failed">Failed to start recording</string>
    <string name="refresh_devices">Reconnect</string>
    <string name="recording_time_format" formatted="false">%02d:%02d:%02d</string>
    <string name="app_title">spcmic 84-Channel Recorder</string>
    <string name="session_time_label">Session Time</string>
    <string name="usb_connection_title">USB Connection</string>
    <string name="sample_rate_title">Sample Rate</string>
    <string name="no_clipping_detected">No clipping detected</string>
    <string name="reset_clip">Reset</string>
    <string name="recording_configuration_title">Recording Configuration</string>
    <string name="clipping_detected">Clipping detected</string>
    <string name="preprocessing_message">Pre-processing recording…</string>
    <string name="exporting_message">Exporting recording…</string>
    <string name="preprocessing_failed">Failed to preprocess recording</string>
    <string name="export_success">Exported %1$s mix to %2$s</string>
    <string name="export_failure">Failed to export %1$s mix</string>
    <string name="export_select_recording">Select the recording before exporting</string>
    <string name="playback_not_ready">Playback not ready</string>
    <string name="playback_cached_ready">Using cached binaural mix</string>
    <string name="export_binaural_menu">Export to binaural</string>
    <string name="export_ortf_menu">Export to ORTF</string>
    <string name="export_xy_menu">Export to XY</string>
    <string name="export_3oa_menu">Export to 3OA</string>
    <string name="mix_binaural">binaural</string>
    <string name="mix_ortf">ORTF</string>
    <string name="mix_xy">XY</string>
    <string name="mix_3oa">3OA</string>
    <string name="percent_format">%1$d%%</string>
    <string name="gain_label">Playback gain</string>
    <string name="gain_value_zero">0 dB</string>
    <string name="gain_value_format">+%1$.1f dB</string>
    <string name="delete_confirmation_message">Are you sure you want to delete this file?</string>
    <string name="delete">Delete</string>
    <string name="delete_failed">Failed to delete recording</string>
    <string name="storage_location_title">Storage location</string>
    <string name="storage_location_change">Change</string>
    <string name="storage_location_hint">Recordings and exports are stored in this directory.</string>
    <string name="storage_location_updated">Storage location updated</string>
    <string name="storage_location_failed">Unable to switch to the selected directory</string>
    <string name="no_clip_short">No Clip</string>
    <string name="location_status_title">Location</string>
    <string name="location_status_disabled">Location capture disabled</string>
    <string name="location_status_idle">Location ready</string>
    <string name="location_status_acquiring">Acquiring location...</string>
    <string name="location_status_unavailable">Location unavailable</string>
    <string name="location_status_permission_denied">Location permission denied</string>
    <string name="location_accuracy_format">Accuracy +/- %1$.0f m</string>
    <string name="location_timestamp_format">Captured at %1$tH:%1$tM:%1$tS</string>
    <string name="location_settings_title">Geolocation</string>
    <string name="location_settings_description">Per recording location data added to GPX file (acquired at stop.)</string>
    <string name="location_settings_toggle">Capture recording GPS location</string>
    <string name="location_permission_rationale">Precise location permission is required to tag recordings.</string>
    <string name="playback_settings_title">Playback</string>
    <string name="playback_realtime_convolution_toggle">Binaural real-time playback</string>
    <string name="playback_realtime_convolution_description">Play in Binaural (KU100). Turn off if playback stutters (plays ch. 25/53 as L/R instead).</string>
    <string name="now_playing_direct">NOW PLAYING (CH. 25/53 -&gt; L/R)</string>
    <string name="now_playing_binaural">NOW PLAYING (BINAURAL)</string>
</resources>