<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_export_binaural"
        android:title="@string/export_binaural_menu"
        android:icon="@drawable/ic_share" />
    <item
        android:id="@+id/action_export_ortf"
        android:title="@string/export_ortf_menu"
        android:icon="@drawable/ic_share" />
    <item
        android:id="@+id/action_export_xy"
        android:title="@string/export_xy_menu"
        android:icon="@drawable/ic_share" />
    <item
        android:id="@+id/action_export_3oa"
        android:title="@string/export_3oa_menu"
        android:icon="@drawable/ic_share" />
    <item
        android:id="@+id/action_delete"
        android:title="Delete"
        android:icon="@drawable/ic_delete" />
</menu>
